[tool.poetry]
name = "thesis-perales"
version = "0.1.0"
description = "Implementación de algoritmos genéticos para la tesis de Perales."
authors = ["eder3232 <eldebar.dk@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
